# OOP_KURSOVAYA

./: .gitignore  pyproject.toml
data/: vacancies.json
src/: api_connectors.py  data_savers.py  main.py  vacancy.py
tests/: test_api_connectors.py  test_data_savers.py  test_main.py  test_vacancy.py
