[tool.poetry]
name = "oop-kursovaya"
version = "0.1.0"
description = ""
authors = ["mike"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.4"
pytest = "^8.4.1"
isort = "^6.0.1"
mypy = "^1.16.1"
black = "^25.1.0"
response = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
